--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://xenzone.workable.com/j/E0C8C5E43D'>Xenzone - Jobs: Front-end Developer, London, JavaScript, HTML, CSS - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://healthmetrix.join.com/jobs/273974-senior-web-frontend-software-engineer-f-m-x'>Job @ Healthmetrix (Berlin): Senior Web Frontend S... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://wirex.workable.com/j/9720E83944'>Wirex - Jobs: Front End Team Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -84,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://futrli.workable.com/j/B1C40984E1'>Futrli - Jobs: Front End Engineer (Belfast) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/B1C40984E1'>Futrli - Jobs: Front End Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -164,7 +172,7 @@ Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A7E14AB66'>blubolt eCommerce - Jobs: Frontend Developers - Shopify ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... This is an exciting role for a driven frontend developer with eCommerce 
 experience at an agency level. We are specifically looking for developers that 
@@ -178,7 +186,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
+<h5><a href='https://drover.workable.com/j/7E8855D6FA?viewed=true'>Drover - Jobs: Lead Frontend Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Lead Frontend Developer at Drover.</p>
 <hr/>
@@ -206,7 +214,7 @@ have?...</p>
 <p><span class="badge badge-light">Kyiv Kyiv Palo Alto</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://docplanner.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docplanner.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,13 +230,13 @@ have?...</p>
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/carousell/jobs/1793994'>Job Application for Software Engineer, Frontend Web (Vietnam) at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Carousell is one of the world's largest and fastest growing mobile classifieds 
 apps. Since our launch in May 2012, we've expanded into 19 major cities with 
 over?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1792879'>Job Application for Software Engineer, Front End at ServiceTitan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... This is an exciting role for an engineer to come in and develop the major UI 
 features in a rapidly growing startup. We build for perfection, use the most 
@@ -268,7 +276,7 @@ If you're looking for a career with a purpose, you've come to the right place.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scalablecapital.recruitee.com/o/frontend-engineer-mfx-munich'>Frontend Engineer (m/f/x) - Scalable Capital GmbH</a></h5> 
+<h5><a href='https://scalablecapital.recruitee.com/o/frontend-engineer-mfx-munich'>Frontend Engineer (m/f/x) - Scalable Capital GmbH</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... As Frontend Engineer, you will. Work alongside a highly motivated team of 
 software engineers and academics implementing change in the financial industry
@@ -314,7 +322,7 @@ make?...</p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
 <hr/>
-<h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sevdesk.recruitee.com/o/frontend-entwickler-mwd'>
       Frontend Entwickler (m/w/d) - sevDesk
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -453,16 +461,8 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thinkhr/c9014cff-e44d-44f8-bef0-97cbe5247eaa'>ThinkHR - Senior Front-End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thinkhr/c9014cff-e44d-44f8-bef0-97cbe5247eaa'>ThinkHR - Senior Front-End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786648'>Job Application for Senior Frontend Engineer, Video at Reddit</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1788975'>Job Application for Staff Frontend Engineer, Ads Engineering at Reddit</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
